# For-fun.

asm/IO_control/: test.asm
asm/Print_Matrix/: Makefile  asd  matrix.asm
asm/hello/: Makefile  hello_world.asm
asm/strings/: Makefile  string.asm
cpp/coroutines/: infinite_generator.cpp  lazy_coroutine.cpp  thread_coroutine.cpp
cpp/crtp/: another_intermediate.h  base.h  implementation.h  intermediate.h  main.cpp
cpp/dependency_injection/: main.cpp
cpp/functors/: smart_ptr_functor.cpp  tripple_functor.cpp
cpp/mocking_fast_pimpl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gdb.txt  main.cpp
cpp/mocking_fast_pimpl/iface/: iface.h
cpp/mocking_fast_pimpl/impl/: IImpl.h
cpp/mocking_fast_pimpl/mock/: MockIface.cpp  MockIface.h
cpp/mocking_fast_pimpl/src/: CMakeLists.txt  IImpl.cpp  Makefile  cmake_install.cmake  impl.cpp
cpp/mocking_fast_pimpl/src/include/: impl.h
cpp/process_synchronisation_examples/condition_variable/: test.cpp
cpp/process_synchronisation_examples/deadlock/: valid.c
cpp/process_synchronisation_examples/monitor/: monitor_switching.cpp  semaphore_switching.cpp
cpp/process_synchronisation_examples/mutex/: completely_protected.cpp  encapsulated.cpp  protected_long.cpp  protected_short.cpp  unprotected.cpp
cpp/process_synchronisation_examples/race_condition/: race_condition.cpp
cpp/process_synchronisation_examples/semaphores/: attacked.c  attacker.c  valid.c
cpp/slots_signals/: signal.h
cpp/smart_ptr/: test.cpp
cpp/template_mocking/: CMakeLists.txt  main.cpp
cpp/template_mocking/src/: A.cpp  A.h  CMakeLists.txt  impl.cpp  impl.h
cpp/template_mocking/test/: hello_test.cpp
cpp/variadic_templates/: logger_static_polymorphism.cpp  templated_logger.cpp
cpp/virtual_fast_pimpl/: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  main.cpp  readme.rst
cpp/virtual_fast_pimpl/iface/: iface.h
cpp/virtual_fast_pimpl/mock/: MockIface.cpp  MockIface.h
cpp/virtual_fast_pimpl/src/: CMakeLists.txt  Makefile  Makefile.bak  iface.cpp
cpp/virtual_fast_pimpl/src/OS_A/: CMakeLists.txt  Makefile  impl.cpp
cpp/virtual_fast_pimpl/src/OS_A/include/: impl.h
cpp/virtual_fast_pimpl/src/OS_B/: CMakeLists.txt  Makefile  impl.cpp
cpp/virtual_fast_pimpl/src/OS_B/include/: impl.h
docker/: Dockerfile  docker-compose.yml  init.sh
functors/: static_functor.cpp
rust/slots_signals/: Cargo.toml
rust/slots_signals/src/: main.rs  memory.rs  signal_handler.rs
rust/slots_signals/src/bank/vault/: vault.rs
rust/slots_signals/src/customer/: customer.rs
rust/slots_signals/src/estate_agency/: mod.rs
rust/slots_signals/src/estate_agency/estate_agent/: estate_agent.rs
slots_signals/: main.cpp
